--- a/template/sb-native/pom.xml
+++ b/template/sb-native/pom.xml
@@ -124,6 +124,9 @@
                 <groupId>org.springframework.experimental</groupId>
                 <artifactId>spring-aot-maven-plugin</artifactId>
                 <version>${spring-native.version}</version>
+                <configuration>
+                    <mode>native-agent</mode>
+                </configuration>
                 <executions>
                     <execution>
                         <id>test-generate</id>
